fixes overflowing table due to pre
BS3 commit 8d3dbe78c6f370e4a15da338502db329d5acb16a

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -599,6 +599,10 @@ body {
     border-bottom: 0;
   }
 }
+.bs-table-scrollable .highlight pre {
+  white-space: normal;
+}
+
 
 /* Related: responsive utilities tables */
 .table code {
